# muti_agent

./: .env.example  .gitignore  Dockerfile  README.md  chatbot.py  checkpoints.db  docker-compose.yml  langgraph.json  memory.db  pyproject.toml  requirements.txt  test1-1.py  test1-2.py  test1.py  test2-1.py  test2.py  test3-1.py  test3.py  test4.py  test5.py  test6-1.py  test6-2.py  test6-3.py  test6.py  test7-1.py  test7.py  test8.py  test9.py  test_math.py
code/: readme.txt  requirements.txt
code/human-in-the-loop/: 1_interrupt.py  2_command_goto.py  3_command_tool.py  4_approve_reject.py  5_human_review.py  6_human-multi-conversation.py  config.py
code/persistent/: 1_checkpoint_persistent.py  2_checkpoint.py
contelix/: .env.example  __init__.py  config.py  error_handler.py  llm_factory.py  logging_config.py  main.py  retry.py
contelix/agents/: __init__.py  node_factory.py  supervisor.py
contelix/api/: __init__.py  app.py
contelix/checkpoint/: __init__.py  manager.py
contelix/docs/: contelix-design-doc.md
contelix/state/: __init__.py  schemas.py  supervisor_factory.py
contelix/tests/: conftest.py  test_config.py  test_scraping.py  test_search.py  test_tools.py  test_visualization.py
contelix/tools/: __init__.py  file_ops.py  sandbox.py  scraping.py  search.py  (+1 more)
edge/: edge.py  entry_point.py
graph/: graph.py
hierarchy/: config.py  document_authoring.py  hierarchy.py  research_team.py  utils.py
node/: node.py
send/: send.py
state/: default_reducer.py  define_reducer.py  messages.py  multi_schema.py  schema.py  schema_type.py
(+20 files in other folders)
